--- a/styles.css
+++ b/styles.css
@@ -36,14 +36,14 @@ a .goog {
   text-align: center;
 }
 
-li {
+li.home {
         list-style: none; margin: 0 0.3rem; float: left;
 }
-li > a {
+li.home > a {
         color: #000; font-size: 1.3rem; letter-spacing: 0.1em;
         text-decoration: none; display: block; padding: 0.9rem 1rem; align-content: center;
 }
-li > a:hover {
+li.home > a:hover {
         background-color: wheat;
 }
 
