--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,20 @@ li.home > a:hover {
         background-color: wheat;
 }
 
+.hex {
+        box-shadow:
+  0 1.3px 2.2px rgba(0, 0, 0, 0.02),
+  0 3.2px 5.3px rgba(0, 0, 0, 0.028),
+  0 6px 10px rgba(0, 0, 0, 0.035),
+  0 10.7px 17.9px rgba(0, 0, 0, 0.042),
+  0 20.1px 33.4px rgba(0, 0, 0, 0.05),
+  0 48px 80px rgba(0, 0, 0, 0.07)
+;
+
+border-radius: 4px;
+
+}
+
 #prof {
     height: 9%;
     width: 10%;
