--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,8 @@ li.blog {
   0 20.1px 33.4px rgba(0, 0, 0, 0.05),
   0 48px 80px rgba(0, 0, 0, 0.07)
 ;
-
+flex-grow: 1;
+height:90%;
 border-radius: 4px;
 
 }
