--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,12 @@ body {
         min-width: 23rem; font-family: monospace; display: table;
         background-color: papayawhip;
 }
+
+body {
+        max-width: 1080px; 
+	margin: 0 auto !important; 
+	float: none !important; 
+}
 #container {
         display: table-cell; vertical-align: middle; text-align: center;
         padding: 1em;
@@ -40,7 +46,7 @@ a .goog {
 
 
 .maintext {
-        max-width: 80vw;
+        max-width: 1080px;
         margin-bottom: 5em;
 }
 
